# flock

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.claude/: launch.json
.github/workflows/: ci.yml  docker-publish.yml  release.yml
config/: example.toml
crates/core/: Cargo.toml
crates/core/src/: app_settings.rs  client.rs  crypto.rs  device.rs  lib.rs  registry.rs  settings.rs
crates/device-http/: Cargo.toml
crates/device-http/src/: form.rs  lib.rs
crates/device-http/tests/fixtures/: dashboard.html  network.html  settings.html  videoset.html  videoset_after_apply.html  videoset_srt.html
crates/device-mock/: Cargo.toml
crates/device-mock/src/: lib.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: lib.rs  subnet_probe.rs
crates/flock/: Cargo.toml
crates/flock/src/: config.rs  main.rs
crates/web/: Cargo.toml
crates/web/src/: auth.rs  error.rs  handlers.rs  lib.rs  preview.rs  state.rs  static_assets.rs  ws.rs
crates/web/static/: app.js  index.html  style.css
docs/: architecture.md  roadmap.md
launcher/: .gitignore  README.md
launcher/scripts/: prepare.sh
launcher/src-tauri/: launcher.toml  tauri.conf.json
