[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/discovery",
    "crates/device-mock",
    "crates/device-http",
    "crates/web",
    "crates/flock",
]
default-members = [
    "crates/core",
    "crates/discovery",
    "crates/device-mock",
    "crates/device-http",
    "crates/web",
    "crates/flock",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
uuid = { version = "1", features = ["v4", "serde"] }
mdns-sd = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["cookies", "rustls-tls", "multipart"] }
scraper = "0.20"
aes-gcm = "0.10"
tokio-stream = "0.1"
