[package]
name = "flock-device-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flock-core = { path = "../core" }
reqwest.workspace = true
scraper.workspace = true
tokio.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
