[package]
name = "flock"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "flock"
path = "src/main.rs"

[dependencies]
flock-core = { path = "../core" }
flock-discovery = { path = "../discovery" }
flock-device-mock = { path = "../device-mock" }
flock-web = { path = "../web" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
