[package]
name = "flock-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flock-core = { path = "../core" }
flock-discovery = { path = "../discovery" }
axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
tokio-stream.workspace = true
